--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/mongoose": "^8.0.1",
     "@nestjs/platform-express": "^8.0.0",
     "@types/mongoose-paginate": "^5.0.10",
+    "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "mongoose": "^5.13.7",
     "mongoose-paginate-v2": "^1.4.2",
