--- a/.env.dev.example
+++ b/.env.dev.example
@@ -2,6 +2,6 @@ BASE_URL=localhost
 PORT=50052
 MONGO_PORT=27017
 MONGO_HOST=localhost
-MONGO_DB_NAME=tonet_card
-DB_USER=
-DB_PASS=
+MONGO_DB_NAME=tonet_card_test
+DB_USER=tonet-db-service
+DB_PASS=T*net^@$ervice<|>
