--- a/.env.prod.example
+++ b/.env.prod.example
@@ -1,8 +1,8 @@
 BASE_URL=localhost
 PORT=50052
 MONGO_PORT=27017
-MONGO_HOST=localhost
-MONGO_DB_NAME=tonet_card
-DB_USER=tonet-db-service
-DB_PASS=T*net^@$ervice<|>
+MONGO_HOST=
+MONGO_DB_NAME=
+DB_USER=t
+DB_PASS=
 
